# ClangBuildAnalyzer

./: .gitignore  CMakeLists.txt
src/: Analysis.cpp  BuildEvents.cpp  BuildEvents.h  main.cpp
